--- a/css/style.css
+++ b/css/style.css
@@ -371,13 +371,50 @@ h2 {
   align-items: center;
 }
 
+.careerCard {
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+  background: white;
+  padding: 25px;
+  border-radius: 15px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+.careerNum {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  background: #007bff;
+  border-radius: 50%;
+}
+
+.careerNum span {
+  color: white;
+  font-size: 1rem;
+}
+
 .careerText {
-    background-color: #ffffff;
-    border-radius: 8px;
-    padding: 1.5rem;
-    color: #333;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    border-left: 5px solid #007bff;
-    margin-left: 20px;
-  }
+  flex: 1;
+}
+
+.careerText h3 {
+  margin-bottom: 15px;
+  color: #333;
+  font-size: 1.4rem;
+}
+
+.careerText ul {
+  padding-left: 20px;
+}
+
+.careerText li {
+  color: #666;
+  margin-bottom: 8px;
+  list-style-type: disc;
+  text-align: left;
+  list-style-position: inside; /* or 'outside' */
+}
