--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ h2 {
 /* main 섹션 스타일 */
 #main {
   background-color: #f8f8f8;
+}
+
+#mainContainer {
+  background-color: #f8f8f8;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -416,5 +420,6 @@ h2 {
   margin-bottom: 8px;
   list-style-type: disc;
   text-align: left;
-  list-style-position: inside; /* or 'outside' */
+  list-style-position: inside;
+  /* or 'outside' */
 }
