--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ li {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: 'Arial', sans-serif;
   line-height: 1.6;
   color: #333;
@@ -75,6 +77,18 @@ h2 {
   position: relative;
 }
 
+h2::after {
+  content: '';
+  position: absolute;
+  width: 50px;
+  height: 4px;
+  background-color: #007bff;
+  border-radius: 10px;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 /* main 섹션 스타일 */
 #main {
   background-color: #f8f8f8;
@@ -129,15 +143,17 @@ h2 {
 
 /* profile 섹션 스타일 */
 #profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-top: 80px;
   background-color: #f0f0f0;
-  flex-direction: row;
   justify-content: center;
   gap: 4rem;
   padding: 0 5%;
 }
 
-#idCard {
+#profileCard {
   display: flex;
   background: white;
   border-radius: 15px;
