--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,15 @@ body {
   background-color: #f4f4f4;
 }
 
+
+.card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+}
+
 /* nav바 스타일 */
 nav {
   position: fixed;
@@ -452,5 +461,47 @@ h2::after {
   list-style-type: disc;
   text-align: left;
   list-style-position: inside;
-  /* or 'outside' */
+}
+
+/* modal 스타일 */
+.modal {
+  display: none; /* 기본적으로 숨김 */
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.5); /* 반투명 배경 */
+}
+
+/* 모달 내용 박스 */
+.modal-content {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 20px;
+  width: 400px;
+  border-radius: 10px;
+  position: relative;
+}
+
+/* 닫기 버튼 (×) */
+.close {
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+#modal button {
+  margin-top: 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
 }
